[package]
name = "rusic-relm"
version = "0.1.0"
authors = ["zero <747050097@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.3.0"
gtk-sys = "^0.5.0"
relm = "^0.11.0"
relm-attributes = "^0.11.0"
relm-derive = "^0.11.0"
gdk-pixbuf = "^0.3.0"
id3 = "^0.2.0"
m3u = "^1.0.0"
crossbeam = "^0.3.0"
futures = "^0.1.16"
pulse-simple = "^1.0.0"
simplemad = "^0.8.1"